Create checkpoint Implementation
