# specs/api-spec.yaml
@@ -246,7 +246,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/CheckpointResponse'
 
-  /checkpoint/{checkpointId}:
+  /checkpoints/{checkpointId}:
     get:
       parameters:
         - $ref: "#/components/parameters/AuthorizationHeader"
@@ -464,6 +464,9 @@ components:
     CreateCheckpointDetail:
       type: object
       properties:
+        roadmapId:
+          type: string
+          format: uuid
         name:
           type: string
         shortDescription:
